app/assets/stylesheets/application.css
/*
 *= require_tree .
 *= require_self
 */

@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');

* {
  font-family: 'Roboto', sans-serif;
  overflow-x: hidden;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  background-color: #fefefe;
  padding: 20px;
  border: 1px solid #888;
  width: 50%;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0;
}

.closeBtn {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  margin-left: 20px;
}

.closeBtn:hover,
.closeBtn:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}


.login-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #f4f4f4;
}

.login-card {
  width: 320px;
  padding: 40px;
  border-radius: 8px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  background-color: #ffffff;
}

.label {
  display: block;
  margin-bottom: 8px;
  color: #555;
  font-weight: 500;
}

.input {
  width: 100%;
  padding: 12px 0 12px 5px;
  margin-bottom: 20px;
  border: 1px solid #ddd;
  border-radius: 4px;
  font-size: 16px;
  color: #333;
  background-color: #f9f9f9;
  transition: border-color 0.2s ease-in-out;
}

.input:focus {
  border-color: #007BFF;
  outline: none;
  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
}

.submit-btn {
  display: inline-block;
  padding: 12px 25px;
  color: #fff;
  background-color: #007BFF;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.2s ease-in-out;
}

.submit-btn:hover {
  background-color: #0056b3;
}

.toast {
  visibility: hidden;
  max-width: 50%;
  width: auto;
  margin: auto;
  position: fixed;
  top: 2%;
  left: 0;
  right: 0;
  z-index: 9999;
  padding: 10px;
  background-color: red;
  color: #fff;
  font-size: large;
  text-align: center;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  opacity: 0.8;
  transition: visibility 0s linear 0.3s, opacity 0.3s linear;
}

.toast.show {
  visibility: visible;
  opacity: 1;
  transition: opacity 0.3s linear;
}

h1 {
  color: #fff;
  margin: 0;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #333;
  padding: 20px;
  margin: 0;
  border-radius: 10px;
}

.user-info {
  display: flex;
  align-items: center;
  color: #fff;
}

.user-email {
  margin-right: 15px;
}

.user-actions {
  appearance: none; /* Remove o estilo padrão */
  -webkit-appearance: none;
  -moz-appearance: none;
  background-color: #444;
  color: #fff;
  border: none;
  border-radius: 5px;
  padding: 5px 30px 5px 30px; /* Padding à esquerda para acomodar o ícone */
  cursor: pointer;
  font-size: 1rem;
}

.user-actions:focus {
  outline: none;
}

.user-actions:hover {
  background-color: #555;
}

.custom-dropdown .dropdown-content {
  display: none;
}

.custom-dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  right: 0;
  background-color: #444;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border-radius: 5px;
}

.dropdown-content a {
  color: #fff;
  padding: 12px 16px;
  display: block;
}

.custom-dropdown:hover .dropdown-content {
  display: block;
}

.select-icon {
  position: absolute;
  top: 50%;
  left: 10px;
  transform: translateY(-50%);
  color: #fff;
  pointer-events: none;
}

button {
  padding: 10px 20px;
  cursor: pointer;
  margin: 10px 0;
  border: none;
  background-color: #333;
  color: #fff;
  border-radius: 5px;
  transition: background-color 0.3s;
}

button:hover {
  background-color: #555;
}

table {
  width: 100%;
  border-collapse: separate;
  margin: 20px 0;
  border-radius: 5px;
}

table,
th,
td {
  border: 1px solid #ddd;
}

table tbody tr {
  transition: transform 0.3s;
}

table tbody tr:hover {
  transform: scale(1.05);
  z-index: 1;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
}

table td {
  padding: 10px;
  border: 1px solid #ccc; 
  background-color: #f9f9f9; 
}

table td + td {
  border-left: none;
}

th,
td {
  padding: 10px;
  text-align: left;
}

th {
  background-color: #333;
  color: #fff;
}

tr:nth-child(even) {
  background-color: #f2f2f2;
}

th:first-child {
  border-top-left-radius: 10px;
}

th:last-child {
  border-top-right-radius: 10px;
}

tr:last-child td:first-child {
  border-bottom-left-radius: 10px;
}

tr:last-child td:last-child {
  border-bottom-right-radius: 10px;
}

.pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}

.pagination a,
.pagination span {
  color: #555;
  padding: 8px 16px;
  margin: 0 5px;
  text-decoration: none;
  border: 1px solid #ddd;
  border-radius: 15px;
  transition: background-color 0.3s, color 0.3s, box-shadow 0.2s;
}

.pagination a:hover {
  background-color: #f7f7f7;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
}

.pagination .current {
  background-color: #007BFF;
  color: #ffffff;
  padding: 8px 16px;
  border: 1px solid #007BFF;
  border-radius: 15px;
  box-shadow: none;
}

.pagination .disabled {
  color: #ccc;
  border: 1px solid #eee;
}

form.formtastic fieldset.inputs,
form.formtastic fieldset.actions
 {
  border: none;
  padding: 0;
  margin: 0;
  position: relative;
}

form.formtastic fieldset.inputs:before,
form.formtastic fieldset.actions:before
 {
  content: none; /* Isso remove o contador de tópicos */
}

/* Ajusta os inputs para terem um design mais limpo */
form.formtastic .input {
  margin-bottom: 20px; /* Espaçamento entre os campos */
}

form.formtastic label {
  display: block;
  margin-bottom: 5px;
  font-weight: bold;
}

form.formtastic input[type="text"],
form.formtastic input[type="password"],
form.formtastic input[type="email"],
form.formtastic textarea,
form.formtastic select {
  width: calc(100% - 1rem);
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05) inset;
  font-size: 1rem;
  transition: border-color 0.3s, box-shadow 0.3s;
  box-sizing: border-box;
}

form.formtastic input[type="text"]:focus,
form.formtastic input[type="password"]:focus,
form.formtastic input[type="email"]:focus,
form.formtastic textarea:focus,
form.formtastic select:focus {
  border-color: #3498db;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1) inset;
}

form.formtastic ol {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.file-upload-wrapper {
  position: relative;
  width: auto;
}

.file-upload-input {
  display: none;
}

.file-upload-label {
  padding: 8px 16px;
  width: auto;
  border: none;
  border-radius: 5px;
  display: inline-block;
  cursor: pointer;
  transition: background-color 0.2s;
  background-color: #4CAF50;
  color: #ffffff;
  font-weight: 300;
}

.file-upload-label:hover {
  background-color: #45a049;
}

.image-preview {
  width: 100%;
  max-width: 200px;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  display: none;
}

.date-picker-input {
  width: calc(100% - 1rem);
  padding: 8px 12px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 14px;
  background-color: #f9f9f9;
  transition: border-color 0.3s, box-shadow 0.3s;
  outline: none;
  box-sizing: border-box;
}

.date-picker-input:focus {
  border-color: #3498db;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
}

@media screen and (max-width: 768px) {
  .navbar {
    flex-direction: column;
    align-items: flex-start;
    width: calc(100% - 20px);
  }

  .user-info {
    margin-top: 10px;
    flex-direction: column;
    align-items: flex-start;
  }

  .user-email {
    margin-bottom: 10px;
  }

  .custom-dropdown {
    position: relative;
  }

  .custom-dropdown .dropdown-content {
    position: static;
    width: 100%;
    border: none;
  }

  .dropdown-link {
    display: block;
    width: 100%;
    text-align: left;
  }
}

